--- a/src/XUnitTestProvider/XUnitTestProvider.7.1.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.7.1.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{CFB96B45-E0FC-402F-97BE-0D9754CE7E3B}</ProjectGuid>
+    <ProjectGuid>{4C84C2B7-9D2F-46DE-80A5-C44AA2873E92}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReSharper.XUnitTestRunner</RootNamespace>
-    <AssemblyName>ReSharper.XUnitTestRunner.7.1</AssemblyName>
+    <RootNamespace>ReSharper.XUnitTestProvider</RootNamespace>
+    <AssemblyName>ReSharper.XUnitTestProvider.7.1</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
@@ -48,6 +48,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="xunit">
       <HintPath>..\..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
@@ -55,26 +56,60 @@
     <Reference Include="xunit.extensions">
       <HintPath>..\..\packages\xunit.extensions.1.9.1\lib\net20\xunit.extensions.dll</HintPath>
     </Reference>
-    <Reference Include="xunit.runner.utility, Version=1.8.0.1545, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\xunit.1.9.1\lib\net20\xunit.runner.utility.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="AttributeNames.cs" />
-    <Compile Include="ExceptionConverter.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReSharperRunnerLogger.cs" />
-    <Compile Include="XunitTaskRunner.cs" />
-    <Compile Include="XunitTestAssemblyTask.cs" />
-    <Compile Include="XunitTestClassTask.cs" />
-    <Compile Include="XunitTestMethodTask.cs" />
+    <Compile Include="CompatibilityExtension.cs" />
+    <Compile Include="Properties\AssemblyInfo.71.cs" />
+    <Compile Include="XunitDefaultTemplates.cs" />
+    <Compile Include="UnitTestElementMetadataIdentifier.cs" />
+    <Compile Include="XunitServiceProvider.cs" />
+    <Compile Include="XunitTestFakeElement.cs" />
+    <Compile Include="XunitFileExplorerInheritorsConsumer.cs" />
+    <Compile Include="XunitElementFactory.cs" />
+    <Compile Include="XunitTestElementSerializer.cs" />
+    <Compile Include="XUnitTestFileExplorer.cs" />
+    <Compile Include="UnitTestElementPsiIdentifier.cs" />
+    <Compile Include="AttributeWrapper.cs" />
+    <Compile Include="MethodWrapper.cs" />
+    <Compile Include="TypeExtensions.cs" />
+    <Compile Include="TypeWrapper.cs" />
+    <Compile Include="XunitTestElementBase.cs" />
+    <Compile Include="XUnitMetadataExplorer.cs" />
+    <Compile Include="XUnitTestMetadataExplorer.cs" />
+    <Compile Include="XunitTestClassElement.cs" />
+    <Compile Include="XunitTestMethodElement.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="SuppressUnusedXunitTestElements.cs" />
+    <Compile Include="XunitFileExplorer.cs" />
+    <Compile Include="XunitTestProvider.71.cs" />
+    <Compile Include="XunitTestProvider.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Resources\LiveTemplates.DotSettings">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Resources\xunit.png" />
+    <Compile Include="XunitServiceProvider.71.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\XUnitTestRunner\XUnitTestRunner.7.1.csproj">
+      <Project>{fddb314e-fcff-4838-a006-ce488291ef38}</Project>
+      <Name>XUnitTestRunner.7.1</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
