--- a/src/XUnitTestRunner/XUnitTestRunner.8.0.csproj
+++ b/src/XUnitTestRunner/XUnitTestRunner.8.0.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AE37EF14-4EC4-4D53-A3A8-90BECB3F9566}</ProjectGuid>
+    <ProjectGuid>{CFB96B45-E0FC-402F-97BE-0D9754CE7E3B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ReSharper.XUnitTestProvider</RootNamespace>
-    <AssemblyName>ReSharper.XUnitTestProvider.7.1</AssemblyName>
+    <RootNamespace>ReSharper.XUnitTestRunner</RootNamespace>
+    <AssemblyName>ReSharper.XUnitTestRunner.8.0</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>
@@ -48,7 +48,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="xunit">
       <HintPath>..\..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
@@ -56,57 +55,27 @@
     <Reference Include="xunit.extensions">
       <HintPath>..\..\packages\xunit.extensions.1.9.1\lib\net20\xunit.extensions.dll</HintPath>
     </Reference>
+    <Reference Include="xunit.runner.utility, Version=1.8.0.1545, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\xunit.1.9.1\lib\net20\xunit.runner.utility.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="XunitDefaultTemplates.cs" />
-    <Compile Include="UnitTestElementMetadataIdentifier.cs" />
-    <Compile Include="XunitServiceProvider.cs" />
-    <Compile Include="XunitTestFakeElement.cs" />
-    <Compile Include="XunitFileExplorerInheritorsConsumer.cs" />
-    <Compile Include="XunitElementFactory.cs" />
-    <Compile Include="XunitTestElementSerializer.cs" />
-    <Compile Include="XUnitTestFileExplorer.cs" />
-    <Compile Include="UnitTestElementPsiIdentifier.cs" />
-    <Compile Include="AttributeWrapper.cs" />
-    <Compile Include="MethodWrapper.cs" />
-    <Compile Include="TypeExtensions.cs" />
-    <Compile Include="TypeWrapper.cs" />
-    <Compile Include="XunitTestElementBase.cs" />
-    <Compile Include="XUnitMetadataExplorer.cs" />
-    <Compile Include="XUnitTestMetadataExplorer.cs" />
-    <Compile Include="XunitTestClassElement.cs" />
-    <Compile Include="XunitTestMethodElement.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="SuppressUnusedXunitTestElements.cs" />
-    <Compile Include="XunitFileExplorer.cs" />
-    <Compile Include="XunitTestProvider.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <Compile Include="AttributeNames.cs" />
+    <Compile Include="ExceptionConverter.cs" />
+    <Compile Include="Properties\AssemblyInfo.80.cs" />
+    <Compile Include="ReSharperRunnerLogger.cs" />
+    <Compile Include="XunitTaskRunner.80.cs" />
+    <Compile Include="XunitTaskRunner.cs" />
+    <Compile Include="XunitTestAssemblyTask.cs" />
+    <Compile Include="XunitTestClassTask.cs" />
+    <Compile Include="XunitTestMethodTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Resources\LiveTemplates.DotSettings">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Resources\xunit.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\XUnitTestRunner\XUnitTestRunner.csproj">
-      <Project>{CFB96B45-E0FC-402F-97BE-0D9754CE7E3B}</Project>
-      <Name>XUnitTestRunner</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -121,7 +90,7 @@
     </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <ReSharperSdkTargets Condition=" '$(ReSharperSdkTargets)' == '' ">$(MSBuildExtensionsPath)\JetBrains\ReSharper.SDK\v7.1</ReSharperSdkTargets>
+    <ReSharperSdkTargets Condition=" '$(ReSharperSdkTargets)' == '' ">$(MSBuildExtensionsPath)\JetBrains\ReSharper.SDK\v8.0</ReSharperSdkTargets>
   </PropertyGroup>
   <Import Project="$(ReSharperSdkTargets)\Plugin.Targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
