--- a/src/XUnitTestProvider/XUnitTestProvider.6.1.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.6.1.csproj
@@ -62,6 +62,7 @@
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="CompatibilityExtension.cs" />
+    <Compile Include="XunitTestMethodElement.61.cs" />
     <Compile Include="Properties\AssemblyInfo.61.cs" />
     <Compile Include="XunitTestProvider.61.cs" />
     <Compile Include="XunitDefaultTemplates.cs" />
