--- a/src/XUnitTestProvider/XUnitTestProvider.8.0.csproj
+++ b/src/XUnitTestProvider/XUnitTestProvider.8.0.csproj
@@ -65,9 +65,9 @@
     <Compile Include="XunitDefaultTemplates.cs" />
     <Compile Include="UnitTestElementMetadataIdentifier.cs" />
     <Compile Include="XunitServiceProvider.cs" />
-    <Compile Include="XunitTestElementBase.80.cs" />
-    <Compile Include="XunitTestFakeElement.80.cs" />
-    <Compile Include="XunitTestFakeElement.cs" />
+    <Compile Include="UnitTestElements\XunitTestElementBase.80.cs" />
+    <Compile Include="UnitTestElements\XunitTestFakeElement.80.cs" />
+    <Compile Include="UnitTestElements\XunitTestFakeElement.cs" />
     <Compile Include="XunitFileExplorerInheritorsConsumer.cs" />
     <Compile Include="XunitElementFactory.cs" />
     <Compile Include="XunitTestElementSerializer.cs" />
@@ -77,11 +77,11 @@
     <Compile Include="MethodWrapper.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Compile Include="TypeWrapper.cs" />
-    <Compile Include="XunitTestElementBase.cs" />
+    <Compile Include="UnitTestElements\XunitTestElementBase.cs" />
     <Compile Include="XUnitMetadataExplorer.cs" />
     <Compile Include="XUnitTestMetadataExplorer.cs" />
-    <Compile Include="XunitTestClassElement.cs" />
-    <Compile Include="XunitTestMethodElement.cs" />
+    <Compile Include="UnitTestElements\XunitTestClassElement.cs" />
+    <Compile Include="UnitTestElements\XunitTestMethodElement.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
